--- a/weily/web.html
+++ b/weily/web.html
@@ -21,7 +21,7 @@
 	</div>
 	<div class="main">
 
-	<h1>Web前端</h1>
+	<!-- <h1>Web前端</h1> -->
 		<div class="topbanner">
 			<div id="boxID" class="img-roll">
 				<div class="pic">
