--- a/weily/web.html
+++ b/weily/web.html
@@ -26,8 +26,8 @@
 			<div id="boxID" class="img-roll">
 				<div class="pic">
 					<ul>
-						<li><a href="#"><img src="picture/Webs/topbanner.jpg"></a></li>
 						<li><a href="#"><img src="picture/Webs/topbanner2.jpg"></a></li>
+						<li><a href="#"><img src="picture/Webs/topbanner.jpg"></a></li>
 					</ul>
 				</div>
 			</div><!-- img-roll -->
@@ -71,6 +71,7 @@
 				</p>
 			</div>
 		</div>
+		<img src="picture/Webs/banner4.jpg">
 	</div>
 
 	<div class="footer">
