--- a/company/index.html
+++ b/company/index.html
@@ -50,7 +50,7 @@
 	
 		<div class="ad">
 			<div id="boxID" class="img-roll">
-				<div class="loading"><img src="images/loading.gif" alt="图片加载中"></div>
+				<!-- <div class="loading"><img src="images/loading.gif" alt="图片加载中"></div> -->
 				<div class="pic">
 					<ul>
 						<li><a href="#"><img src="images/ad2.jpg"></a></li>
