--- a/weily/index.html
+++ b/weily/index.html
@@ -21,8 +21,9 @@
         font-size: 16px;
     }
     </style>
-  <link href="bundle.css" rel="stylesheet"></head>
+  <link href="css/bundle.css" rel="stylesheet"></head>
   <body>
     <div id="react-app"></div>
-  <script type="text/javascript" src="bundle.js"></script></body>
+  <script type="text/javascript" src="js/bundle.js"></script></body>
 </html>
+x
