--- a/weily/join.html
+++ b/weily/join.html
@@ -19,8 +19,8 @@
     <div class="nav">
         <a href="#" class="nav-logo" title="微力首页">Weily Lab</a>
         <ul>
-            <li><a href="" title="点击进入">开发工具</a></li>
-            <li><a href="" title="点击进入">课程中心</a></li>
+            <li><a href="web.html" title="点击进入">开发工具</a></li>
+            <li><a href="android.html" title="点击进入">课程中心</a></li>
             <li><a href="" title="点击进入">学习指南</a></li>
         </ul>
     </div>
@@ -28,73 +28,12 @@
     <!-- fullpage -->
     <div id="fullpage">
         <div class="section">
-            <!-- <div class="bg" style="z-index:3"><img src="picture/1zhezhao.png"></div> -->
-            <!--菜单按钮-->
-           <!--  <div class="sq_menu_container">
-                <div class="sq_menu">
-                    <div class="sq_m_span">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </div>
-                    <div class="sq_m_meun">
-                        MEUN
-                    </div>
-                </div>
-                <div class="sq_meun_back"></div>
-                <div class="sq_meun_nav">
-                    <div class="sq_nav_1 nav0">
-                        <span class="sq_nav_park"></span>
-                        <span class="sq_nav_left">Home page</span>
-                    </div>
-                    <div class="sq_nav_1 nav1">
-                        <span class="sq_nav_park"></span>
-                        <span class="sq_nav_left">What we do</span>
-                    </div>
-                    <div class="sq_nav_1 nav2">
-                        <span class="sq_nav_park"></span>
-                        <span class="sq_nav_left">Our work</span>
-                    </div>
-                    <div class="sq_nav_1 nav3">
-                        <span class="sq_nav_park"></span>
-                        <span class="sq_nav_left">About us</span>
-                    </div>
-                    <div class="sq_nav_1 nav4">
-                        <span class="sq_nav_park"></span>
-                        <span class="sq_nav_left">Contact us</span>
-                    </div>
-                    <div class="sq_nav_1 nav5">
-                        <span class="sq_nav_park"></span>
-                        <span class="sq_nav_left">Information</span>
-                    </div>
-                    <div class="sq_nav_1 nav6">
-                        <span class="sq_nav_park"></span>
-                        <span class="sq_nav_left">TEL:400-868-288</span>
-                    </div>
-                </div>
-            </div> -->
-            <!--QQ-电话-->
-           <!--  <div class="sq_concat">
-                <div class="sq_concat_back">
-                    <div class="sq_phone"><img src="picture/phone.png" alt="联系电话"></div>
-                    <div class="sq_qq"><img src="picture/qq.png" alt="联系QQ"></div>
-                    <div class="sq_weixin"><img src="picture/weixin.png" alt="微信"></div>
-                </div>
-            </div> -->
-            
             <div class="sq_center sq_position"><img src="picture/er.png"></div>
             <div class="sq_center_1 sq_position"><img src="picture/zuiwai.png"></div>
             <div class="sq_center_2"><img src="picture/logo.png"></div>
 
-            <!--从这里开始-->
-           <!--  <div class="sq_start">从这里开始</div>
-            <div class="sq_mouse">
-                <img src="picture/shubiao.png">
-                <div class="sq_m_small"></div>
-            </div> -->
-
            <div class="bg">
-               <img src="images/promo-bg.jpg" alt="第一屏">
+               <img src="picture/firstscreen5.jpg" alt="第一屏">
            </div>
         </div>
 
@@ -113,7 +52,7 @@
                         </a>
                     </li>
                     <li class="sq_li2">
-                        <a href="#" class="sq_img">
+                        <a href="android.html" class="sq_img">
                             <img src="picture/andriod.png" alt="安卓开发">
                             <p class="sq_img_s1">Andriod开发</p>
                             <p>Andriod Develop</p>
