--- a/weily/index.html
+++ b/weily/index.html
@@ -10,21 +10,21 @@
     <div class="nav">
         <a href="#" class="nav-logo" title="微力首页">Weily Lab</a>
         <ul>
-            <li><a href="web.html" title="点击进入" class="menu menu3">开发工具</a>
+            <li><a href="javascript:void(0)" title="点击进入" class="menu menu3">开发工具</a>
                 <div class="nav-menu nav-menu3">
-                    <a href="">荣誉</a>
-                    <a href="">户外活动</a>
+                    <a href="web.html">荣誉</a>
+                    <a href="android.html">户外活动</a>
                     <a href="">参赛作品</a>
                 </div>
             </li>
-            <li><a href="android.html" title="点击进入" class="menu menu2">课程中心</a>
+            <li><a href="javascript:void(0)" title="点击进入" class="menu menu2">课程中心</a>
                 <div class="nav-menu nav-menu2">
                     <a href="">荣誉</a>
                     <a href="">户外活动</a>
                     <a href="">参赛作品</a>
                 </div>
             </li>
-            <li><a href="" title="点击进入" class="menu menu1">学习指南</a>
+            <li><a href="javascript:void(0)" title="点击进入" class="menu menu1">学习指南</a>
                 <div class="nav-menu nav-menu1">
                     <a href="">荣誉</a>
                     <a href="">户外活动</a>
