--- a/weily/index.html
+++ b/weily/index.html
@@ -26,8 +26,8 @@
             </li>
             <li><a href="javascript:void(0)" title="点击进入" class="menu menu1">学习指南</a>
                 <div class="nav-menu nav-menu1">
-                    <a href="">荣誉</a>
-                    <a href="">户外活动</a>
+                    <a href="web.html">荣誉</a>
+                    <a href="android.html">户外活动</a>
                     <a href="">参赛作品</a>
                 </div>
             </li>
