--- a/weily/index.html
+++ b/weily/index.html
@@ -2,13 +2,13 @@
 <html lang="zh">
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-    <meta name="viewport" content="width=1024">
+    <meta name="viewport" content="device-width">
     <title>微力互动实验室</title>
     <link rel="stylesheet" type="text/css" href="css/home.css">
   <body>
     <!-- nav头部导航 -->
     <div class="nav">
-        <a href="#" class="nav-logo" title="微力首页">Weily Lab</a>
+        <a href="#" class="nav-logo" title="微力首页" id="weily">Weily Lab</a>
         <ul>
             <li><a href="javascript:void(0)" title="点击进入" class="menu menu3">开发工具</a>
                 <div class="nav-menu nav-menu3">
