--- a/weily/index.html
+++ b/weily/index.html
@@ -121,9 +121,9 @@
             <a href="http://edu.manew.com/" title="国内最大的Unity3D专业视频学习平台" target="_blank" class="manew">国内最大的Unity3D专业视频学习平台</a>
         </div>
         <div class="item" style="border: none">
-            <a href="http://www.imooc.com" title="慕课网(IMOOC)是国内最大的IT技能学习平台" target="_blank" class="imooc">慕课网(IMOOC)是国内最大的IT技能学习平台</a>
-            <a href="http://www.jikexueyuan.com" title="极客学院是中国android开发在线学习平台" target="_blank" class="jkxy">极客学院是中国android开发在线学习平台</a>
-            <a href="http://edu.manew.com/" title="国内最大的Unity3D专业视频学习平台" target="_blank" class="manew">国内最大的Unity3D专业视频学习平台</a>
+            <a href="https://github.com/github" title="GitHub是一个面向开源及私有软件项目的托管平台" target="_blank" class="github">GitHub是一个面向开源及私有软件项目的托管平台</a>
+            <a href="http://note.youdao.com/" title="有道云笔记，记录、管理、查看" target="_blank" class="youdao">随时记录，笔记、云存储、印象笔记</a>
+            <a href="http://www.adobe.com/cn/products/cs6/photoshop.html" title="Photoshop编修与绘图工具" target="_blank" class="ps">Photoshop主要处理以像素所构成的数字图像</a>
         </div>
     </div>
     
@@ -177,31 +177,47 @@
             <div class="products">
                 <h3>成果展示</h3>
                 <a href="javascript:void(0)" class="item6">
-                    <img src="picture/shetuan.png">
+                    <div class="product-img">
+                        <img src="picture/shetuan.png">
+                        <div class="product-suggest">
+                            <p class="product-name">趣社团</p>
+                        </div>
+                    </div>
                     <div class="product-con">
                         <p>使用最前沿的开发工具，学习最流行的开发技术，观看最高效的视频教程，使用最前沿的开发工具</p>
                     </div>
                 </a>
                 <a href="javascript:void(0)" class="item6">
-                    <img src="picture/eatgo.png">
+                    <div class="product-img">
+                        <img src="picture/eatgo.png">
+                        <div class="product-suggest">
+                            <p class="product-name">Eat-Go</p>
+                        </div>
+                    </div>
                      <div class="product-con">
                         <p>使用最前沿的开发工具，学习最流行的开发技术，观看最高效的视频教程，使用最前沿的开发工具，学习最流行的开发技术</p>
                     </div>
                 </a>
                 <a href="javascript:void(0)" class="item6">
-                    <img src="picture/product.jpg">
+                    <div class="product-img">
+                        <img src="picture/product.jpg">
+                    </div>
                      <div class="product-con">
                         <p>使用最前沿的开发工具，学习最流行的开发技术，观看最高效的视频教程，使用最前沿的开发工具，学习最流行的开发技术</p>
                     </div>
                 </a>
                 <a href="javascript:void(0)" class="item6">
-                    <img src="picture/product.jpg">
+                    <div class="product-img">
+                        <img src="picture/product.jpg">
+                    </div>
                      <div class="product-con">
                         <p>使用最前沿的开发工具，学习最流行的开发技术，观看最高效的视频教程</p>
                     </div>
                 </a>
                 <a href="javascript:void(0)" class="item6">
-                    <img src="picture/product.jpg">
+                    <div class="product-img">
+                        <img src="picture/product.jpg">
+                    </div>
                      <div class="product-con">
                         <p>使用最前沿的开发工具，学习最流行的开发技术，观看最高效的视频教程</p>
                     </div>
@@ -210,7 +226,13 @@
         </div>
     </div>
 
-    <div class="footer"></div>
+    <div class="footer">
+        <div class="share">
+            <a href="javascript:void(0)" class="weixin"></a>
+            <a href="javascript:void(0)" class="weibo"></a>
+            <a href="jhttp://service.weibo.com/share/share.php" class="fenxiang"></a>
+        </div>
+    </div>
 
 </body>
 <script type="text/javascript" src="js/jquery.js"></script>
