--- a/weily/index.html
+++ b/weily/index.html
@@ -4,6 +4,7 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="device-width">
     <title>微力互动实验室</title>
+    <link rel="Shortcut Icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/home.css">
   <body>
     <!-- nav头部导航 -->
@@ -111,7 +112,7 @@
         <div class="item">
             <a href="http://www.sublimetext.com/" title="神级代码编辑软件SublimeText,也是HTML和散文先进的文本编辑器" target="_blank" class="sublime">神级代码编辑软件SublimeText,也是HTML和散文先进的文本编辑器</a>
 
-            <a href="http://rj.baidu.com/soft/detail/27390.html?ald" title="Android Studio 是一个Android集成开发工具" target="_blank" class="android">Android Studio 是一个Android集成开发工具</a>
+            <a href="http://www.android.com" title="Android Studio 是一个Android集成开发工具" target="_blank" class="android">Android Studio 是一个Android集成开发工具</a>
             
             <a href="http://www.unity.com" title="三维视频游戏、建筑可视化、实时三维动画" target="_blank" class="unity">Unity3D是由Unity Technologies开发的一个让玩家轻松创建诸如三维视频游戏、建筑可视化、实时三维动画等类型互动内容的多平台的综合型游戏开发工具</a>
         </div>
@@ -170,6 +171,14 @@
                         <a href="javascript:void(0)">2016“华迪杯”全国大学生计算机设计大赛四川省级赛</a>
                         <a href="javascript:void(0)">2016“华为杯”四川省计算机作品赛</a>
                     </div>
+                </div>
+                <p class="more">展开更多<span>></span><p>
+
+                <h3>赛事公告</h3>
+                <div>
+                    <a href="javascript:void(0)" title="第八届全国软件和信息技术专业人才大赛">第八届“蓝桥杯”</a>
+                    <a href="javascript:void(0)">2017“华迪杯”全国大学生计算机设计大赛四川省级赛</a>
+                    <a href="javascript:void(0)">2017“华为杯”四川省计算机作品赛</a>
                 </div>
                 <p class="more">展开更多<span>></span><p>
             </div>
@@ -232,6 +241,19 @@
             <a href="javascript:void(0)" class="weibo"></a>
             <a href="jhttp://service.weibo.com/share/share.php" class="fenxiang"></a>
         </div>
+
+        <ul class="clearfix about-us">
+            <li><a href="javascript:void(0)">版权所有<span>|</span></a></li>
+            <li><a href="javascript:void(0)">关于我们<span>|</span></a></li>
+            <li><a href="javascript:void(0)">网站导航<span>|</span></a></li>
+            <li><a href="javascript:void(0)">联系电话&nbsp;18228075165<span>|</span></a></li>
+            <li><a href="javascript:void(0)">邮箱&nbsp;249262363@qq.com</a></li>
+        </ul>
+
+        <ul class="clearfix address">
+            <li><a href="index.html" style="margin-right: 20px">&copy;微力科技实验室<span>www.weily.com</span></a></li>
+            <li><a href="javascript:void(0)">地址<span>成都市西华大学第六教学楼421</span></a></li>
+        </ul>
     </div>
 
 </body>
