--- a/weily/index.html
+++ b/weily/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="device-width">
     <title>微力互动实验室</title>
     <link rel="Shortcut Icon" href="favicon.ico">
+    <link rel="stylesheet" type="text/css" href="css/public.css">
     <link rel="stylesheet" type="text/css" href="css/home.css">
   <body>
     <!-- nav头部导航 -->
