--- a/weily/index.html
+++ b/weily/index.html
@@ -10,7 +10,7 @@
   <body>
     <!-- nav头部导航 -->
     <div class="nav">
-        <a href="#" class="nav-logo" title="微力首页" id="weily">Weily Lab</a>
+        <a href="index.html" class="nav-logo" title="微力首页" id="weily">Weily Lab</a>
         <ul>
             <li><a href="javascript:void(0)" title="点击进入" class="menu menu3">开发工具</a>
                 <div class="nav-menu nav-menu3">
