--- a/weily/web.html
+++ b/weily/web.html
@@ -13,7 +13,7 @@
 	<div class="bg">
 		<!-- nav头部导航 -->
 		    <div class="nav">
-		        <a href="#" class="nav-logo" title="微力首页" id="weily">Weily Lab</a>
+		        <a href="index.html" class="nav-logo" title="微力首页" id="weily">Weily Lab</a>
 		        <ul>
 		            <li><a href="javascript:void(0)" title="点击进入" class="menu menu3">开发工具</a>
 		                <div class="nav-menu nav-menu3">
@@ -171,7 +171,7 @@
                 $(".menu").eq(i).removeClass("active")
             }) 
         })
-        
+
 		//变换导航栏背景
 		var windowH=$(window).height();
 		$(window).scroll(function(){
