--- a/weily/index.html
+++ b/weily/index.html
@@ -48,7 +48,7 @@
             <div class="bg-content">
                 <h1>微力科技实验室</h1>
                 <p>Web开发、Android开发、Unity3D开发、美工设计。微力发展至今，已不仅是一个实验室，更多的是一个平台，一个提供编程开发、学习交流、技术分享、组建团队、创新创业的平台</p>
-                <a href="#">了解更多</a>
+                <a href="join.html">了解更多</a>
             </div>
         </div>
     </div><!-- bg-banner -->
@@ -142,15 +142,15 @@
         <div class="item5">
             <div class="program-img proL-img"></div>
             <div class="program-con proL-con">
-                <h3>某公司某软件开发</h3>
-                <p>使用最前沿的开发工具，学习最流行的开发技术，观看最高效的视频教程，使用最前沿的开发工具，学习最流行的开发技术，观看最高效的视频教程，使用最前沿的开发工具，学习最流行的开发技术，观看最高效的视频教程</p>
+                <h3>云鞋网</h3>
+                <p>云鞋，是羌族人在喜庆日子里穿的一种自制布鞋，云云鞋”鞋鞋型貌似小船，鞋尖微翘，鞋底较厚，鞋帮上绣有彩色云纹和杜鹃花纹纹样图案，故有“云鞋”、“花鞋”或 “勾尖布鞋...</p>
                 <button class="program-btn" title="查看更多">更多</button>
             </div>
         </div>
         <div class="item5">
             <div class="program-img proR-img"></div>
             <div class="program-con proR-con">
-                <h3>某公司网站开发</h3>
+                <h3>华新体育</h3>
                 <p>使用最前沿的开发工具，学习最流行的开发技术，观看最高效的视频教程，使用最前沿的开发工具，学习最流行的开发技术，观看最高效的视频教程，使用最前沿的开发工具，学习最流行的开发技术，观看最高效的视频教程</p>
                 <button class="program-btn" title="查看更多">更多</button>
             </div>
