--- a/weily/index.html
+++ b/weily/index.html
@@ -139,22 +139,22 @@
     <div class="banner5">
         <h2>Programs</h2>
         <hr>
-        <div class="item5">
+        <a href="http://3dyunxie.com" class="item5">
             <div class="program-img proL-img"></div>
             <div class="program-con proL-con">
                 <h3>云鞋网</h3>
                 <p>云鞋，是羌族人在喜庆日子里穿的一种自制布鞋，云云鞋”鞋鞋型貌似小船，鞋尖微翘，鞋底较厚，鞋帮上绣有彩色云纹和杜鹃花纹纹样图案，故有“云鞋”、“花鞋”或 “勾尖布鞋...</p>
                 <button class="program-btn" title="查看更多">更多</button>
             </div>
-        </div>
-        <div class="item5">
+        </a>
+        <a href="http://huaxingtiyu168.com/" class="item5">
             <div class="program-img proR-img"></div>
             <div class="program-con proR-con">
                 <h3>华新体育</h3>
                 <p>使用最前沿的开发工具，学习最流行的开发技术，观看最高效的视频教程，使用最前沿的开发工具，学习最流行的开发技术，观看最高效的视频教程，使用最前沿的开发工具，学习最流行的开发技术，观看最高效的视频教程</p>
                 <button class="program-btn" title="查看更多">更多</button>
             </div>
-        </div>
+        </a>
     </div>
     
     <div class="banner6">
@@ -186,7 +186,18 @@
 
             <div class="products">
                 <h3>成果展示</h3>
-                <a href="javascript:void(0)" class="item6">
+                 <a href="http://bluewolfrain.cn/EasyChange/" class="item6">
+                    <div class="product-img">
+                        <img src="picture/yihuan.jpg">
+                        <div class="product-suggest">
+                            <p class="product-name">易换网</p>
+                        </div>
+                    </div>
+                     <div class="product-con">
+                        <p>依托于NV+设计工作室建立，团队成员由5个具有创新意识、拥有共同目标、有着不同专业知识背景的朝气蓬勃的年轻人组成</p>
+                    </div>
+                </a>
+                <a href="http://moxiufe.cn/Projects/asociations/views/homepage.html" class="item6">
                     <div class="product-img">
                         <img src="picture/shetuan.png">
                         <div class="product-suggest">
@@ -197,7 +208,18 @@
                         <p>使用最前沿的开发工具，学习最流行的开发技术，观看最高效的视频教程，使用最前沿的开发工具</p>
                     </div>
                 </a>
-                <a href="javascript:void(0)" class="item6">
+                <a href="http://bluewolfrain.cn/haiyu" class="item6">
+                    <div class="product-img">
+                        <img src="picture/haiyu.jpg">
+                        <div class="product-suggest">
+                            <p class="product-name">嗨语-对外汉语之家</p>
+                        </div>
+                    </div>
+                     <div class="product-con">
+                        <p>嗨语的顾问团队都是接受2年以上心理课程及专业素养的培训。专门帮助我们的学生规划自己的学习计划，及工作规划</p>
+                    </div>
+                </a>
+                <a href="http://121.42.13.137:3000/" class="item6">
                     <div class="product-img">
                         <img src="picture/eatgo.png">
                         <div class="product-suggest">
@@ -208,22 +230,7 @@
                         <p>使用最前沿的开发工具，学习最流行的开发技术，观看最高效的视频教程，使用最前沿的开发工具，学习最流行的开发技术</p>
                     </div>
                 </a>
-                <a href="javascript:void(0)" class="item6">
-                    <div class="product-img">
-                        <img src="picture/product.jpg">
-                    </div>
-                     <div class="product-con">
-                        <p>使用最前沿的开发工具，学习最流行的开发技术，观看最高效的视频教程，使用最前沿的开发工具，学习最流行的开发技术</p>
-                    </div>
-                </a>
-                <a href="javascript:void(0)" class="item6">
-                    <div class="product-img">
-                        <img src="picture/product.jpg">
-                    </div>
-                     <div class="product-con">
-                        <p>使用最前沿的开发工具，学习最流行的开发技术，观看最高效的视频教程</p>
-                    </div>
-                </a>
+               
                 <a href="javascript:void(0)" class="item6">
                     <div class="product-img">
                         <img src="picture/product.jpg">
