--- a/weily/join.html
+++ b/weily/join.html
@@ -17,7 +17,7 @@
 <body>
     <!-- nav -->
     <div class="nav">
-        <a href="#" class="nav-logo" title="微力首页">Weily Lab</a>
+        <a href="index.html" class="nav-logo" title="微力首页">Weily Lab</a>
         <ul>
             <li><a href="web.html" title="点击进入">开发工具</a></li>
             <li><a href="android.html" title="点击进入">课程中心</a></li>
