--- a/weily/index.html
+++ b/weily/index.html
@@ -151,7 +151,8 @@
             <div class="program-img proR-img"></div>
             <div class="program-con proR-con">
                 <h3>华新体育</h3>
-                <p>使用最前沿的开发工具，学习最流行的开发技术，观看最高效的视频教程，使用最前沿的开发工具，学习最流行的开发技术，观看最高效的视频教程，使用最前沿的开发工具，学习最流行的开发技术，观看最高效的视频教程</p>
+                <p>
+                华兴体育：不平凡的生活需要好的鞋子来点缀。华兴体育以好的品质、低的价格回馈给大众，丰富的品牌更能满足大家的需求。</p>
                 <button class="program-btn" title="查看更多">更多</button>
             </div>
         </a>
@@ -205,7 +206,7 @@
                         </div>
                     </div>
                     <div class="product-con">
-                        <p>使用最前沿的开发工具，学习最流行的开发技术，观看最高效的视频教程，使用最前沿的开发工具</p>
+                        <p>趣社团：无社团，不大学。我们可以通过趣社团及时的了解各个社团的活动和相关信息，更方便集中的管理我们的社团。</p>
                     </div>
                 </a>
                 <a href="http://bluewolfrain.cn/haiyu" class="item6">
@@ -227,7 +228,9 @@
                         </div>
                     </div>
                      <div class="product-con">
-                        <p>使用最前沿的开发工具，学习最流行的开发技术，观看最高效的视频教程，使用最前沿的开发工具，学习最流行的开发技术</p>
+                        <p>
+                        食在中国,味在四川，风味小吃,冠绝天下。成都美食数不胜数，Eat-Go提供平台让我们更系统的了解成都的美食，分享我们心中的美食。
+                        </p>
                     </div>
                 </a>
                
