--- a/newTax.html
+++ b/newTax.html
@@ -59,7 +59,7 @@
 				<p class="TaxInfo">税后工资：<span v-show="FuckMoney > 0">{{TaxAfter}} 元</span></p>
 			</div>
 		</div>
-		<p class="copyright">@版权所有 www.lzsfe.cn</p>
+		<p class="copyright">©版权所有 www.lzsfe.cn</p>
 	</div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.17/vue.min.js"></script>
