--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
 	.table{margin: 10px 0;}
 	.table>tbody>tr>td{text-align: center;}
 	.high-light{color: #fba31a;}
-	.questions{line-height: 50px;padding: 0 15px;color: #777}
+	.questions{position: absolute;top: 0;right: 0;line-height: 50px;padding: 0 15px;color: #777;}
+	.questions:hover{text-decoration: none;}
+	.nav-wrapper{position: relative;}
 </style>
 <body>
 	<div id="app">
@@ -42,13 +44,13 @@
 		<img class="bgimg" src="public/img/taxBg.jpg" alt="">
 		<!-- 导航栏 -->
 		<nav class="navbar navbar-default">
-		  <div class="container-fluid container">
+		  <div class="container-fluid container nav-wrapper">
 		    <div class="navbar-header">
 		      <a class="navbar-brand" href="https://github.com/Git-sublime">
 		        LZSFE
 		      </a>
-		      <!-- <a href="https://www.jianshu.com/p/510ccbfcd328" class="pull-right questions">问题反馈</a> -->
 		    </div>
+		    <a href="https://www.jianshu.com/p/247bd34b2856" class="pull-right questions">问题反馈</a>
 		  </div>
 		</nav>
 		<div class="container main">
